newest versions of webpages and nav bar 3.15 15:24

--- a/cloudy.html
+++ b/cloudy.html
@@ -10,39 +10,48 @@
 
 <body>
 	
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<div class="container-fluid">
-		  <!-- <a class="navbar-brand" href="#">Navbar</a>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button> -->
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-			  <li class="nav-item">
-				<a class="nav-link active" aria-current="page" href="#">Study Home</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="#">Comparison</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="#">Data</a>
-			  </li>
-			  <li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-				  Plots
-				</a>
-				<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-				  <li><a class="dropdown-item" href="#">Temperature</a></li>
-				  <li><a class="dropdown-item" href="#">Humidity</a></li>
-				  <li><a class="dropdown-item" href="#">Cloudiness</a></li>
-				  <li><a class="dropdown-item" href="#">WindSpeed</a></li>
-				</ul>
-			  </li>
-			</ul>
-
+	<div class="pos-f-t">
+		<div class="collapse" id="navbarToggleExternalContent">
+		  <div class="bg-white p-4">
+			<h4 class="text-black">Collapsed content</h4>
+			<span class="text-muted"></span>
 		  </div>
 		</div>
-	  </nav>
+		<nav class="navbar navbar-expand-lg navbar-light bg-white">
+			<div class="container-fluid">
+			<a class="navbar-brand" href="#"></a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" target="_blank" href="comparison.html">Comparison</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" target="_blank" href="data.html">Data</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					Plots
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<li><a class="dropdown-item" href="maxtemp.html">Temperature</a></li>
+					<li><a class="dropdown-item" href="cloudy.html">Humidity</a></li>
+					<li><a class="dropdown-item" href="humid.html">Cloudiness</a></li>
+					<li><a class="dropdown-item" href="speed.html">WindSpeed</a></li>
+					<li><a class="dropdown-item" href="data.html">Data</a></li>
+					</ul>
+				</li>
+				</ul>
+
+			</div>
+			</div>
+		</nav>
+	</div>
 
 		<div class="container">
 
@@ -105,6 +114,6 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js?cdv=40" type="text/javascript"></script>
 </body>
 </html>
