--- a/comparison.html
+++ b/comparison.html
@@ -18,7 +18,8 @@
 		</div>
 		<nav class="navbar navbar-expand-lg navbar-light bg-white">
 			<div class="container-fluid">
-			<a class="navbar-brand" href="#"></a>
+			<a class="navbar-brand" href="index.html">
+				<span id="p-text">Latitude</span></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
