--- a/comparison.html
+++ b/comparison.html
@@ -18,21 +18,22 @@
 		</div>
 		<nav class="navbar navbar-expand-lg navbar-light bg-white">
 			<div class="container-fluid">
-			<a class="navbar-brand" href="index.html">
-				<span id="p-text">Latitude</span></a>
+				<a class="navbar-brand" href="index.html">
+					<span id="p-text">Latitude</span>
+				</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-				<li class="nav-item">
+				<!-- <li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+				</li> -->
+				<li class="nav-item active">
+					<a class="nav-link" target="_self" href="comparison.html">Comparison</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" target="_blank" href="comparison.html">Comparison</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" target="_blank" href="data.html">Data</a>
+					<a class="nav-link" target="_self" href="data.html">Data</a>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -43,11 +44,9 @@
 					<li><a class="dropdown-item" href="cloudy.html">Humidity</a></li>
 					<li><a class="dropdown-item" href="humid.html">Cloudiness</a></li>
 					<li><a class="dropdown-item" href="speed.html">WindSpeed</a></li>
-					<li><a class="dropdown-item" href="data.html">Data</a></li>
 					</ul>
 				</li>
 				</ul>
-
 			</div>
 			</div>
 		</nav>
@@ -57,7 +56,7 @@
 
         <div class="row comp-box-set">
 
-                <div class="col-lg-12">
+                <div class="col-3 col-sm-3 col-md-12 col-lg-12">
 
 					<div class="card comp-box-2">
 					
