--- a/index_test.html
+++ b/index_test.html
@@ -19,7 +19,7 @@
 		</div>
 		<nav class="navbar navbar-expand-lg navbar-light bg-white">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="index.html">
+				<a class="nav-link" href="index.html">
 					<span id="p-text">Latitude</span>
 				</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +61,7 @@
 
 					<div class="card box-1">
 
-						<div class="card-header title_style">Summary: Lattitude vs Maximum Temperature</div>
+						<div class="card-header title_style">Summary: Lattitude vs X</div>
 
 						<div class = "card-body">
 
@@ -70,10 +70,10 @@
 								<a target="_blank" href="maxtemp.html">
 									<img class = "img-script" src="Resources/assets/images/cities_temp_lat.png" alt="Temp Map">
 								</a>
-								Maximum temperatures vs Latitude:<br><br> (a) Maximum city temperatures ranged from approximately -30F to 110F; (b) maximum
-								temperatures were higher for cities in closer proximity to the equator; (c) the temp - lat data showed a nice <strong><em>negative
-								correlation of max temperature with latitude</em></strong>, meaning the max temperature tended to decrease with increasing
-								latitude.
+								"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 							</p>
 
 						</div>		
@@ -88,16 +88,16 @@
 					
 						<div class="card-header title_style">Visualizations</div>
 
-						<a target="_self" href="maxtemp.html">
-							<img src="Resources/assets/images/cities_temp_lat.png" class="img-fourplots img-R1C1" id = "img_border" alt="maxtemp">
+						<a target="_blank" href="maxtemp.html">
+							<img src="Resources/assets/images/cities_temp_lat.png" class="img-fourplots img-R1C1" alt="maxtemp">
 						</a>
-						<a target="_self" href="cloudy.html">
+						<a target="_blank" href="cloudy.html">
 							<img src="Resources/assets/images/cities_cloud_lat.png" class="img-fourplots img-R1C2" alt="cloudiness">
 						</a>
-						<a target="_self" href="humid.html">
+						<a target="_blank" href="humid.html">
 							<img src="Resources/assets/images/cities_hum_lat.png" class="img-fourplots img-R2C1" alt="humdity">
 						</a>
-						<a target="_self" href="speed.html">
+						<a target="_blank" href="speed.html">
 							<img src="Resources/assets/images/cities_speed_lat.png" class="img-fourplots img-R2C2" alt="windspeed">
 						</a>
 
@@ -106,14 +106,11 @@
 			</div>
 		</div>
 
-
-
-
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js?cdv=40" type="text/javascript"></script>
 </body>
 </html>
