added data table responsiveness, read me and analysis

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 							<p class="card-text">
 
-								<a target="_blank" href="maxtemp.html">
+								<a target="_self" href="maxtemp.html">
 									<img class = "img-script" src="Resources/assets/images/cities_temp_lat.png" alt="Temp Map">
 								</a>
 								This study examined weather conditions of randomly-selected cities across the globe, ultimately comparing 
@@ -92,16 +92,16 @@
 					
 						<div class="card-header title_style">Visualizations</div>
 
-						<a target="_blank" href="maxtemp.html">
+						<a target="_self" href="maxtemp.html">
 							<img src="Resources/assets/images/cities_temp_lat.png" class="img-fourplots img-R1C1" alt="maxtemp">
 						</a>
-						<a target="_blank" href="cloudy.html">
+						<a target="_self" href="cloudy.html">
 							<img src="Resources/assets/images/cities_cloud_lat.png" class="img-fourplots img-R1C2" alt="cloudiness">
 						</a>
-						<a target="_blank" href="humid.html">
+						<a target="_self" href="humid.html">
 							<img src="Resources/assets/images/cities_hum_lat.png" class="img-fourplots img-R2C1" alt="humdity">
 						</a>
-						<a target="_blank" href="speed.html">
+						<a target="_self" href="speed.html">
 							<img src="Resources/assets/images/cities_speed_lat.png" class="img-fourplots img-R2C2" alt="windspeed">
 						</a>
 
