--- a/maxtemp.html
+++ b/maxtemp.html
@@ -67,7 +67,7 @@
 
 							<p class="card-text">
 
-								<a target="_blank" href="maxtemp.html">
+								<a target="_self" href="maxtemp.html">
 									<img class = "img-script" src="Resources/assets/images/cities_temp_lat.png" alt="Temp Map">
 								</a>
 								Maximum temperatures vs Latitude:<br><br> (a) Maximum city temperatures ranged from approximately -30F to 110F; (b) maximum
