--- a/comparison.html
+++ b/comparison.html
@@ -29,8 +29,8 @@
 				<!-- <li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="index.html">Home</a>
 				</li> -->
-				<li class="nav-item active">
-					<a class="nav-link" target="_self" href="comparison.html">Comparison</a>
+				<li class="nav-item">
+					<a class="nav-link active" target="_self" href="comparison.html">Comparison</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" target="_self" href="data.html">Data</a>
