--- a/maxtemp.html
+++ b/maxtemp.html
@@ -42,8 +42,8 @@
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<li><a class="dropdown-item" href="maxtemp.html">Temperature</a></li>
-					<li><a class="dropdown-item" href="cloudy.html">Humidity</a></li>
-					<li><a class="dropdown-item" href="humid.html">Cloudiness</a></li>
+					<li><a class="dropdown-item" href="humid.html">Humidity</a></li>
+					<li><a class="dropdown-item" href="cloudy.html">Cloudiness</a></li>
 					<li><a class="dropdown-item" href="speed.html">WindSpeed</a></li>
 					</ul>
 				</li>
