--- a/maxtemp.html
+++ b/maxtemp.html
@@ -12,14 +12,15 @@
 	
 	<nav class="navbar navbar-expand-lg navbar-light bg-white">
 		<div class="container-fluid">
+			<nav class="navbar navbar-light bg-white">
+				<a class="navbar-brand" href="index.html" id = "brand-text">Latitude</a>
+			</nav>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-					<li class="nav-item">
-						<a class="nav-link" target="_self" href="index.html">Home</a>
-					</li>
+					
 					<li class="nav-item">
 						<a class="nav-link" target="_self" href="comparison.html">Comparison</a>
 					</li>
@@ -49,7 +50,7 @@
 
 					<div class="card box-1">
 
-						<div class="card-header title_style">Summary: Lattitude vs Maximum Temperature</div>
+						<div class="card-header title_style">Summary: Latitude vs Maximum Temperature</div>
 
 						<div class = "card-body">
 
